@@ -3,6 +3,7 @@ Changelog
 
 1.3 - (Unreleased)
 ------------------
+* Add traverser in order to maintain old assessment URLs after migration [ghicaale]
 
 1.2 - (2010-07-01)
 ------------------
